Fixed margin spacing issues

--- a/src/components/FoodList.module.css
+++ b/src/components/FoodList.module.css
@@ -27,6 +27,7 @@
   border-radius: 5px;
   padding: 5px;
   margin: 3.5px 0;
+  margin-left: 5px;
   cursor: pointer;
   transition: opacity 0.2s;
 }
@@ -36,7 +37,7 @@
 }
 
 .subItemContainer {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .item {
